# PaddleOCR2Pytorch

./: .gitignore  README.md  README_en.md  onnx_optimizer.py  pyproject.toml
configs/cls/doc_ori/: PP-LCNet_x1_0_doc_ori.yml
configs/cls/textline_ori/: PP-LCNet_x0_25_textline_ori.yml  PP-LCNet_x1_0_textline_ori.yml
configs/det/PP-OCRv6/: PP-OCRv6_medium_det.yml  PP-OCRv6_small_det.yml  PP-OCRv6_tiny_det.yml
configs/layout/: PP-DocLayout-S.yml
configs/rec/PP-OCRv6/: PP-OCRv6_medium_rec.yml  PP-OCRv6_small_rec.yml  PP-OCRv6_tiny_rec.yml
configs/rec/ch_ppocr_v2.0/: om_rec_chinese_common_train_v2.0.yml  om_rec_chinese_lite_train_v2.0.yml
configs/tablev3/: SLANeXt_wired.yml
converter/: bm_ch_ppocr_mobile_v2.0_rec_converter.py  bm_ch_ppocr_server_v2.0_rec_converter.py  bm_ch_ppocr_v2_rec_converter.py  ch_ppocr_mobile_v2.0_cls_converter.py  ch_ppocr_mobile_v2.0_det_converter.py  ch_ppocr_mobile_v2.0_rec_converter.py  ch_ppocr_server_v2.0_det_converter.py  ch_ppocr_server_v2.0_rec_converter.py  ch_ppocr_v2_det_converter.py  ch_ppocr_v2_rec_converter.py  ch_ppocr_v3_det_converter.py  ch_ppocr_v3_rec_converter.py  ch_ppocr_v3_rec_converter_nodistill.py  ch_ppocr_v4_det_converter.py  ch_ppocr_v4_det_server_converter.py  ch_ppocr_v4_rec_converter.py  ch_ppocr_v4_rec_server_converter.py  det_converter.py  det_fcenet_converter.py  e2e_converter.py  layoutxlm_re_converter.py  layoutxlm_ser_converter.py  multilingual_mobile_v2.0_rec_converter.py  multilingual_ppocr_v3_rec_converter.py  om_ch_ppocr_mobile_v2.0_rec_converter.py  om_ch_ppocr_server_v2.0_rec_converter.py  om_ch_ppocr_v2_rec_convert.py  om_multilingual_mobile_v2.0_rec_converter.py  pplcnet_cls_converter.py  ppocr_v6_det_converter.py  ppocr_v6_rec_converter.py  ppstructure_formula_converter.py  ppstructure_layout_converter.py  ppstructure_picodet_converter.py  ppstructure_seal_converter.py  ppstructure_slanext_converter.py  ppstructure_table_det_converter.py  ppstructure_table_rec_converter.py  ppstructure_table_structure_converter.py  rec_can_converter.py  (+10 more)
doc/doc_ch/: inference.md  installation.md  models_list.md  pt2onnx.md
doc/doc_en/: inference_en.md  installation_en.md  models_list_en.md
docs/: PP-OCRv6_porting_guide.md  SKILL_PORTING_PADDLEOCR.md  WORKFLOW_PORTING_PADDLEOCR_MODELS.md
misc/: attention_grucell.py  attention_head.py  common.py  conv.py  diff.py  fc.py  gelu.py  gru_cell.py  hard_swish.py  hs.py  layernorm.py  lstm.py  lstm_diy.py  onnx_inference.py  onnx_optimizer.py  onnx_vs_pt_mobile_rec.py  onnx_vs_pt_multilingual_mobile.py  onnx_vs_pt_server_rec.py  pp_ocr.py  pp_rec_srn_head.py  pp_self_attention.py  pp_table_att_head.py  pp_table_fpn.py  pt_rec_resnet_fpn.py  pt_rec_srn_head.py  pt_self_attention.py  pt_table_att_head.py  pt_table_fpn.py  pt_table_mobilenet_v3.py  rec_resnet_fpn.py  rec_srn.py  rec_srn_head.py  table_att_head.py  table_det.py  table_mobile.py  table_mobilenet_v3.py  test_pt.py
ptstructure/: README.md  __init__.py  predict_structure.py  predict_system.py  utility.py
ptstructure/doc_preprocess/: __init__.py  doc_orientation.py  unwarp.py
ptstructure/formula/: __init__.py  postprocess.py  ppformulanet.py  ppformulanet_head.py  tokenizer.py  unimernet_head.py
ptstructure/layout/: __init__.py  picodet.py  postprocess.py
ptstructure/layout/ptppyolov2/: ppyolo_utils.py  ppyolov2.py  ppyolov2_base.py  ppyolov2_darknet.py  ppyolov2_layout.py  ppyolov2_pt.py  ppyolov2_resnet.py  ppyolov2_yolo_fpn.py  ppyolov2_yolo_head.py  pt_utils.py  (+1 more)
ptstructure/seal/: __init__.py  seal_det.py
ptstructure/table/: __init__.py  matcher.py  predict_structure.py  predict_table.py  slanext.py  table_utils.py
ptstructure/utils/: __init__.py  markdown.py  reading_order.py  visualize.py
ptstructure/vqa/: README.md  README_en.md  README_en_pp.md  infer_ser_e2e.py  infer_ser_re_e2e.py  vqa_utils.py
pytorchocr/: base_ocr_v20.py
pytorchocr/modeling/: common.py
pytorchocr/postprocess/: __init__.py  cls_postprocess.py  db_postprocess.py  east_postprocess.py  rec_postprocess.py  sast_postprocess.py
pytorchocr/utils/: utility.py
skills/: SKILL_PORTING_PADDLEOCR.md  doc_preprocess_porting_guide.md  ppstructurev3_porting_guide.md
tests/: conftest.py  test_setup_validation.py
tools/: test_new_models.py
tools/infer/: predict_cls.py  predict_det.py  predict_e2e.py  predict_rec.py  predict_sr.py  predict_system.py  pytorchocr_utility.py
(+35 files in other folders)
